# water-reminder

./: Cargo.toml  PROMPT.md
.github/workflows/: android.yml
src/: app.slint  lib.rs  main.rs
