[package]
name = "water_reminder"
version = "0.1.0"
edition = "2024"

[dependencies]
# 开启 android-activity 后端
slint = { version = "1.8.0", features = ["compat-1-2", "backend-android-activity-06", "renderer-software", "std"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"

[build-dependencies]
slint-build = "1.8.0"

[package.metadata.android]
package = "com.hacker.waterreminder"
label = "喝水助手"
# 权限声明（如果后续需要通知功能）
# build_targets = ["aarch64-linux-android"]
