[package]
name = "water_reminder"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.8.0", features = ["compat-1-2", "backend-android-activity-06", "renderer-software", "std"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
# 用于调用安卓原生通知接口
jni = "0.21"

[build-dependencies]
slint-build = "1.8.0"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[package.metadata.android]
package = "com.hacker.waterreminder"
label = "WaterReminder Pro"
# 权限声明：震动和通知
# build_targets = ["aarch64-linux-android"]
